--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,6 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
             android:fontFamily="@font/montserrat" android:textSize="14sp" android:textColor="@android:color/white"
-            android:background="@drawable/swoosh_button"/>
+            android:background="@drawable/swoosh_button" android:onClick="sendMessage"/>
 
 </android.support.constraint.ConstraintLayout>
