--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -13,7 +13,7 @@
             android:id="@+id/imageView3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"/>
+            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
 
     <ImageView
             android:layout_width="88dp"
@@ -22,9 +22,9 @@
             android:scaleType="fitCenter" android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/app_logp"/>
     <TextView
-            android:text="Desired League"
+            android:text="@string/desired_league"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView4" android:textColor="@android:color/white"
@@ -40,27 +40,27 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4">
         <ToggleButton
-                android:text="Mens"
+                android:text="@string/Mens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/toggleButton3"
-                android:textOff="Mens" android:textOn="Mens" android:background="@drawable/swoosh_toggle"
+                android:textOff="@string/Mens" android:textOn="@string/Mens" android:background="@drawable/swoosh_toggle"
                 android:textColor="@android:color/white"/>
         <ToggleButton
-                android:text="Womens"
+                android:text="@string/womens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="170dp"
                 tools:layout_editor_absoluteX="160dp" android:id="@+id/toggleButton" android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp" android:textOff="Womens" android:textOn="Womens"
+                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                 android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"/>
         <ToggleButton
-                android:text="Co-Ed"
+                android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="Co-Ed"
-                android:textOn="Co-Ed" android:textColor="@android:color/white"
+                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="@string/co_ed"
+                android:textOn="@string/co_ed" android:textColor="@android:color/white"
                 android:background="@drawable/swoosh_toggle"/>
     </LinearLayout>
     <Button
-            android:text="Next"
+            android:text="@string/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
