--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LeagueActivity">
+        tools:context=".Controller.LeagueActivity">
 
     <ImageView
             android:layout_width="0dp"
@@ -42,22 +42,25 @@
         <ToggleButton
                 android:text="@string/Mens"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton3"
-                android:textOff="@string/Mens" android:textOn="@string/Mens" android:background="@drawable/swoosh_toggle"
-                android:textColor="@android:color/white"/>
+                android:layout_height="wrap_content"
+                android:textOff="@string/Mens" android:textOn="@string/Mens"
+                android:background="@drawable/swoosh_toggle"
+                android:textColor="@android:color/white" android:id="@+id/mensLeagueBtn"
+                android:onClick="onMensClicked"/>
         <ToggleButton
                 android:text="@string/womens"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="170dp"
-                tools:layout_editor_absoluteX="160dp" android:id="@+id/toggleButton" android:layout_marginTop="16dp"
+                tools:layout_editor_absoluteX="160dp" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
-                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"/>
+                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
+                android:onClick="onWomensClicked"/>
         <ToggleButton
                 android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="@string/co_ed"
+                android:layout_height="wrap_content" android:id="@+id/coedLeagueBtn" android:textOff="@string/co_ed"
                 android:textOn="@string/co_ed" android:textColor="@android:color/white"
-                android:background="@drawable/swoosh_toggle"/>
+                android:background="@drawable/swoosh_toggle" android:onClick="onCoedClicked"/>
     </LinearLayout>
     <Button
             android:text="@string/next"
